Adjust styles for small screens

--- a/frontend/stylesheets/components/_list-speaker.scss
+++ b/frontend/stylesheets/components/_list-speaker.scss
@@ -1,6 +1,12 @@
 .list-speaker {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+
+  padding-left: 0;
+
+  @include media-breakpoint-up('sm') {
+    grid-template-columns: repeat(4, 1fr);
+  }
 
   &__individual {
     padding-top: 1rem;
@@ -18,6 +24,10 @@
   &__name {
     margin-block-start: 1rem;
 
-    font-size: map-get($font-sizes, 'xl');
+    font-size: map-get($font-sizes, 'lg');
+
+    @include media-breakpoint-up('sm') {
+      font-size: map-get($font-sizes, 'xl');
+    }
   }
 }
