--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -1,6 +1,8 @@
 .list-sponsor {
   @include make-row();
 
+  padding-left: 0;
+
   &__company {
     @include make-col-ready();
     @include make-col(6);
