Add call to action on the sponsors page

--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -25,20 +25,6 @@ body.home .app-hero {
 
 body.home .app-content {
   text-align: center;
-
-  .list-speaker .list-speaker__individual:first-child {
-
-    @include media-breakpoint-up('sm') {
-      grid-column-start: 2;
-    }
-  }
-
-  .list-sponsor {
-    @include media-breakpoint-up('sm') {
-      width: 65%;
-      margin: 0 auto;
-    }
-  }
 }
 
 body.home .list-speaker {
@@ -48,5 +34,14 @@ body.home .list-speaker {
     @include media-breakpoint-up('sm') {
       grid-column-start: 2;
     }
+  }
+}
+
+body.home .list-sponsor {
+  padding-left: 0;
+
+  @include media-breakpoint-up('sm') {
+    width: 65%;
+    margin: 0 auto;
   }
 }
