add fathom analytics code

--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -50,3 +50,5 @@
 <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
 
 <link rel="manifest" href="/manifest.json"">
+
+<script src="https://fs.rubyconfth.com/script.js" data-site="{{ metadata.fathom_analytics }}" defer></script>
