--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -51,4 +51,6 @@
 
 <link rel="manifest" href="/manifest.json"">
 
-<script src="https://fs.rubyconfth.com/script.js" data-site="{{ metadata.fathom_analytics }}" defer></script>
+{% if bridgetown.environment == "production" %}
+  {% render "analytics" %}
+{% endif %}
