--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -50,3 +50,7 @@
 <link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
 
 <link rel="manifest" href="/manifest.json"">
+
+{% if bridgetown.environment == "production" %}
+  {% render "analytics" %}
+{% endif %}
