--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -3,14 +3,24 @@
 
   &__company {
     @include make-col-ready();
-    @include make-col(6);
+    @include make-col(4);
 
     display: flex;
     justify-content: center;
 
     padding-top: 1rem;
     padding-bottom: 1rem;
+
+    //silver row only has two smaller items
+    &:nth-child(4),&:nth-child(5) {
+      @include make-col(6);
+      @include make-col-offset(1.5);
+      .list-sponsor__logo {
+        width: 75%;
+      }
+    }
   }
+  
 
   &__link {
     display: block;
@@ -25,6 +35,7 @@
     margin-top: 2rem;
   }
 }
+
 
 .list-sponsor--with-info {
 
