--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -4,6 +4,7 @@
   &__company {
     @include make-col-ready();
     @include make-col(4);
+    
 
     display: flex;
     justify-content: center;
@@ -13,10 +14,12 @@
 
     //silver row only has two smaller items
     &:nth-child(4),&:nth-child(5) {
-      @include make-col(6);
       .list-sponsor__logo {
         width: 75%;
       }
+    }
+    &:nth-child(4) {
+      @include make-col-offset(2)
     }
   }
   
@@ -28,7 +31,7 @@
 
   &__logo {
     max-width: 100%;
-    max-height:100px;
+    max-height:80px;
   }
 
   & + & {
