--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -12,12 +12,7 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
 
-    //silver row only has two smaller items, limit height
-    &:nth-child(4),&:nth-child(5) {
-      .list-sponsor__logo {
-        max-height:60px;
-      }
-    }
+    //silver row only has two smaller items
     &:nth-child(4) {
       @include make-col-offset(2)
     }
@@ -31,14 +26,25 @@
 
   &__logo {
     max-width: 100%;
-    max-height:80px;
   }
 
   & + & {
     margin-top: 2rem;
   }
 }
-
+//limit height on silver row
+body.home .list-sponsor {
+  &__company {
+    .list-sponsor__logo {
+      max-height:80px;
+    }
+    &:nth-child(4),&:nth-child(5) {
+      .list-sponsor__logo {
+        max-height:60px;
+      }
+    }
+  }
+}
 
 .list-sponsor--with-info {
 
