--- a/frontend/stylesheets/components/_list-sponsor.scss
+++ b/frontend/stylesheets/components/_list-sponsor.scss
@@ -4,20 +4,13 @@
   &__company {
     @include make-col-ready();
     @include make-col(4);
-    
 
     display: flex;
     justify-content: center;
 
     padding-top: 1rem;
     padding-bottom: 1rem;
-
-    //silver row only has two smaller items
-    &:nth-child(4) {
-      @include make-col-offset(2)
-    }
   }
-  
 
   &__link {
     display: block;
@@ -29,11 +22,19 @@
   }
 
   & + & {
-    margin-top: 2rem;
+    @include media-breakpoint-up('sm') {
+      margin-top: 1rem;
+    }
+  }
+
+  & + &:not(:last-child) {
+    margin-bottom: 1rem;
+
+    @include media-breakpoint-up('sm') {
+      margin-bottom: 2rem;
+    }
   }
 }
-
-
 
 .list-sponsor--with-info {
 
