--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -47,10 +47,6 @@
 <link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon/android-icon-192x192.png"/>
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png"/>
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png"/>
-<link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico"/>
 
-<link rel="manifest" href="/manifest.json"">
-
-{% if bridgetown.environment == "production" %}
-  {% render "analytics" %}
-{% endif %}
+<link rel="manifest" href="/manifest.json"/>
