--- a/frontend/stylesheets/screens/_practicalities.scss
+++ b/frontend/stylesheets/screens/_practicalities.scss
@@ -4,6 +4,13 @@ body.practicalities {
     font-weight: bold;
   }
   .app-content {
+    h2 {
+      margin-top:rem(60px);
+      border-bottom: 1px map-get($color-brand, 'primary') solid;
+    }
+    h3 {
+      margin-top:rem(30px);
+    }
     img {
       width:rem(400px);
       max-width:100%;
