--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -25,6 +25,10 @@ body.home .app-hero {
 
 body.home .app-content {
   text-align: center;
+
+  h2 {
+    border: none;
+  }
 }
 
 body.home .list-speaker {
