--- a/frontend/stylesheets/screens/_practicalities.scss
+++ b/frontend/stylesheets/screens/_practicalities.scss
@@ -1,8 +1,8 @@
 body.practicalities {
   .app-content {
     img {
-      width:rem(400px);
-      max-width:100%;
+      width: min(25rem, 100%);
+      margin-top: 0.5rem;
     }
   }
 }
