Add practicalities page (#222)
Co-authored-by: Olivier Robert <olivierobert@gmail.com>

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -30,6 +30,8 @@
 @import 'components/list-sponsor';
 @import 'components/list-speaker';
 @import 'components/logo';
+@import 'components/section-text';
 
 @import 'screens/home';
 @import 'screens/sponsor';
+@import 'screens/practicalities';
