--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import 'components/app-navigation';
 @import 'components/btn';
 @import 'components/btn-toggle';
+@import 'components/card-talk';
 @import 'components/card-venue';
 @import 'components/form';
 @import 'components/form-mailing-list';
@@ -31,6 +32,7 @@
 @import 'components/list-speaker';
 @import 'components/logo';
 @import 'components/section-text';
+@import 'components/table-schedule';
 
 @import 'screens/home';
 @import 'screens/sponsor';
