--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -35,5 +35,6 @@
 @import 'components/table-schedule';
 
 @import 'screens/home';
+@import 'screens/schedule';
 @import 'screens/sponsor';
 @import 'screens/practicalities';
