Implement tabs for the two-day schedule

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -31,6 +31,7 @@
 @import 'components/list-sponsor';
 @import 'components/list-speaker';
 @import 'components/logo';
+@import 'components/nav';
 @import 'components/section-text';
 @import 'components/table-schedule';
 
