--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -36,6 +36,7 @@ body.home .list-speaker {
 }
 
 body.home .list-sponsor {
+  justify-content: center;
   padding-left: 0;
 
   @include media-breakpoint-up('sm') {
