Remove default styling from Bootstrap for nav tabs

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -31,7 +31,7 @@
 @import 'components/list-sponsor';
 @import 'components/list-speaker';
 @import 'components/logo';
-@import 'components/nav';
+@import 'components/nav-tab';
 @import 'components/section-text';
 @import 'components/table-schedule';
 
