--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -20,6 +20,7 @@ body.home .app-hero {
   .btn {
     margin-top: 2rem;
     font-size: map-get($font-sizes, 'lg');
+    border-radius: var(--bs-border-radius-lg);
   }
 }
 
