--- a/frontend/stylesheets/components/_table-schedule.scss
+++ b/frontend/stylesheets/components/_table-schedule.scss
@@ -8,6 +8,10 @@
 
     .table-schedule__time {
       width: 25%;
+      &--start {
+        font-size:larger;
+        font-weight:bold;
+      }
 
       @include media-breakpoint-up('sm') {
         width: 15%;
@@ -25,6 +29,9 @@
 
   &__slot {
     border: 1px solid var(--bs-border-color);
+    &--speaker {
+      background: rgb(0 0 0 / 5%);
+    }
   }
 
   tbody .table-schedule__time,
