Add page-secpfrici styles for the list of speakers

--- a/frontend/stylesheets/application.scss
+++ b/frontend/stylesheets/application.scss
@@ -36,6 +36,7 @@
 @import 'components/table-schedule';
 
 @import 'screens/home';
-@import 'screens/schedule';
-@import 'screens/sponsor';
 @import 'screens/practicalities';
+@import 'screens/schedule';
+@import 'screens/speaker';
+@import 'screens/sponsor';
