--- a/frontend/stylesheets/components/_list-speaker.scss
+++ b/frontend/stylesheets/components/_list-speaker.scss
@@ -1,3 +1,5 @@
+@use '../variables';
+
 .list-speaker {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -27,11 +29,30 @@
   &__name {
     margin-block-start: 1rem;
 
-    font-size: map-get($font-sizes, 'lg');
+    font-size: map-get(variables.$font-sizes, 'lg');
 
     @include media-breakpoint-up('sm') {
-      font-size: map-get($font-sizes, 'xl');
+      font-size: map-get(variables.$font-sizes, 'xl');
     }
+  }
+
+  &__social {
+    &-icon {
+      transform: scale(0.75);
+    }
+
+    &-link {
+      text-decoration: none;
+    }
+
+    &-link:not(:hover) {
+      color: variables.$base-font-color;
+      
+    } 
+  }
+
+  &__bio {
+    margin-top: 1rem;
   }
 }
 
