--- a/frontend/stylesheets/components/_card-talk.scss
+++ b/frontend/stylesheets/components/_card-talk.scss
@@ -5,8 +5,14 @@
   &__title {
     margin-bottom: 0.5rem;
     
+    
     @include media-breakpoint-up('sm') {
       font-size: map-get(variables.$font-sizes, 'xl');
+    }
+
+    > a:not(:hover) {
+      color: variables.$base-font-color;
+
     }
   }
 
