--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -32,26 +32,37 @@ body.home .app-content {
   }
 }
 
-body.home .list-speaker {
-  margin-top: 2rem;
-}
+body.home .speaker-lineup {
+  .list-speaker,
+  .btn  {
+    margin-top: 1rem;
 
-body.home .list-sponsor {
-  justify-content: center;
-  padding-left: 0;
-
-  @include media-breakpoint-up('sm') {
-    margin-inline: auto;
-  }
-
-  &.list-sponsor--silver {
     @include media-breakpoint-up('sm') {
-      width: 75%
+      margin-top: 2rem;
     }
   }
-  &.list-sponsor--speaker {
+}
+
+body.home .sponsors {
+    
+  .list-sponsor {
+    justify-content: center;
+    padding-left: 0;
+
     @include media-breakpoint-up('sm') {
-      width: 60%
+      margin-inline: auto;
+    }
+
+    &.list-sponsor--silver {
+      @include media-breakpoint-up('sm') {
+        width: 75%
+      }
+    }
+
+    &.list-sponsor--speaker {
+      @include media-breakpoint-up('sm') {
+        width: 60%
+      }
     }
   }
 }
