Add links to Bridgetown

--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -19,8 +19,11 @@
       <div class="app-footer__legal">
         &copy; Bangkok.rb
       </div>
+      <div class="app-footer__community">
+        Built with <a href="https://www.ruby-lang.org/en/">Ruby</a> ❤️ <a href="https://www.bridgetownrb.com/">Bridgetown</a>
+      </div>
       <div class="app-footer__link">
-        Past conferences: <a href="/past/2019">2019</a>
+        Past events: <a href="/past/2019">2019</a>
       </div>
     </div>
   </div>
