--- a/frontend/stylesheets/components/_card-talk.scss
+++ b/frontend/stylesheets/components/_card-talk.scss
@@ -9,6 +9,12 @@
     @include media-breakpoint-up('sm') {
       font-size: map-get(variables.$font-sizes, 'xl');
     }
+    a {
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
 
     > a:not(:hover) {
       color: variables.$base-font-color;
