--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -49,20 +49,28 @@ body.home .sponsors {
     justify-content: center;
     padding-left: 0;
 
+    &--silver {
+      .list-sponsor__company {
+        @include media-breakpoint-up('sm') {
+          @include make-col(3);
+        }
+      }
+    }
+  
     @include media-breakpoint-up('sm') {
       margin-inline: auto;
     }
+  }
 
-    &.list-sponsor--silver {
-      @include media-breakpoint-up('sm') {
-        width: 75%
-      }
+  &.list-sponsor--silver {
+    @include media-breakpoint-up('sm') {
+      width: 75%
     }
+  }
 
-    &.list-sponsor--speaker {
-      @include media-breakpoint-up('sm') {
-        width: 60%
-      }
+  &.list-sponsor--speaker {
+    @include media-breakpoint-up('sm') {
+      width: 60%
     }
   }
 }
