--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -20,7 +20,7 @@
         &copy; Bangkok.rb
       </div>
       <div class="app-footer__community">
-        Built with <a href="https://www.ruby-lang.org/en/">Ruby</a> ❤️ <a href="https://www.bridgetownrb.com/">Bridgetown</a>
+        Built with <a href="https://www.ruby-lang.org/en/">Ruby</a> & <a href="https://www.bridgetownrb.com/">Bridgetown</a>
       </div>
       <div class="app-footer__link">
         Past events: <a href="/past/2019">2019</a>
