--- a/frontend/stylesheets/components/_table-schedule.scss
+++ b/frontend/stylesheets/components/_table-schedule.scss
@@ -20,6 +20,10 @@
       @include media-breakpoint-up('sm') {
         width: 85%;
       }
+      &--subtitle {
+        display: block;
+        font-size: 80%;
+      }
     }
   }
 
