--- a/frontend/stylesheets/screens/_home.scss
+++ b/frontend/stylesheets/screens/_home.scss
@@ -49,7 +49,7 @@ body.home .sponsors {
     justify-content: center;
     padding-left: 0;
 
-    &--silver {
+    &--silver,&--speaker {
       .list-sponsor__company {
         @include media-breakpoint-up('sm') {
           @include make-col(3);
