Fix rendering of all menu items on all screen sizes

--- a/frontend/stylesheets/components/_app-header.scss
+++ b/frontend/stylesheets/components/_app-header.scss
@@ -15,7 +15,7 @@
       position: relative;
       z-index: map-get($zIndex, 'highest');
 
-      @include media-breakpoint-up('lg') {
+      @include media-breakpoint-up('xl') {
         display: none;
       }
     }
