--- a/src/_components/header.liquid
+++ b/src/_components/header.liquid
@@ -16,7 +16,7 @@
           {% for menu_item in menu_items %}
           <li class="app-navigation__item">
             <a href="{{ menu_item.permalink | relative_url }}" class="app-navigation__link">
-              <spn class="app-navigation__text">{{ menu_item.title }}</span>
+              <span class="app-navigation__text">{{ menu_item.title }}</span>
             </a>
           </li>
           {% endfor %}
