--- a/frontend/stylesheets/components/_app-navigation.scss
+++ b/frontend/stylesheets/components/_app-navigation.scss
@@ -11,7 +11,7 @@
   background: var(--bs-white);
   box-shadow: 0 0 3rem rgb(0 0 0 / 40%);
 
-  @include media-breakpoint-up('lg') {
+  @include media-breakpoint-up('xl') {
     position: revert;
     inset: revert;
     box-shadow: none;
@@ -24,7 +24,7 @@
 
     padding-top: var(--app-header-height);
 
-    @include media-breakpoint-up('lg') {
+    @include media-breakpoint-up('xl') {
       flex-direction: row;
       align-items: center;
       justify-content: end;
@@ -53,7 +53,7 @@
     line-height: 1.75;
     font-weight: 500;
 
-    @include media-breakpoint-up('lg') {
+    @include media-breakpoint-up('xl') {
       display: block;
       padding: 0 1rem;
 
@@ -80,7 +80,7 @@
   }
 
   &__link:hover {
-    @include media-breakpoint-up('lg') {
+    @include media-breakpoint-up('xl') {
       color: var(--bs-white);
     }
   }
@@ -89,8 +89,12 @@
     width: 100%;
     height: 100%;
     
-    @include media-breakpoint-up('lg') {
+    @include media-breakpoint-up('xl') {
       opacity: 1;
     }
+  }
+
+  &__text {
+    white-space: pre;
   }
 }
