--- a/src/_layouts/home.liquid
+++ b/src/_layouts/home.liquid
@@ -23,10 +23,7 @@
       <div class="container">
         <small class="app-hero__subheading">Bangkok, Thailand</small>
         <div class="app-hero__heading display-1">9-10 December, 2022</div>
-        <div class="app-hero__heading display-4">Tickets now on sale</div>
-        <a href="https://www.eventpop.me/e/13417/rubyconfth-2022" target="_blank" class="btn btn--outline-light">
-          Buy Tickets {% render "icon", icon: "icon-arrow-right-circle" %}
-        </a>
+        <div class="app-hero__heading display-4">Thank you for joining us!</div>
       </div>
     </div>
 
