--- a/src/_components/card_talk.liquid
+++ b/src/_components/card_talk.liquid
@@ -11,6 +11,13 @@
       </a>
     </small>
     {% endif %}
+    {% if event.youtube_id %}
+    <small>
+      <a href="https://www.youtube.com/watch?v={{ event.youtube_id }}" target="_blank" class="card-talk__video">
+        (Video)
+      </a>
+    </small>
+    {% endif %}
   </div>
   {% endif %}
   <div class="card-talk__speaker">
