Update footer with the link to the archived 2022 website

--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -23,7 +23,7 @@
         Built with <a href="https://www.ruby-lang.org/en/">Ruby</a> & <a href="https://www.bridgetownrb.com/">Bridgetown</a>
       </div>
       <div class="app-footer__link">
-        Past events: <a href="/past/2019">2019</a>
+        Past events: <a href="/past/2022/">2022</a> - <a href="/past/2019/">2019</a>
       </div>
     </div>
   </div>
