--- a/src/_components/list_social_platform.liquid
+++ b/src/_components/list_social_platform.liquid
@@ -1,7 +1,7 @@
 <ul class="list-social-platform">
   {% for social_platform in social_platforms %}
   <li class="list-social-platform__item">
-    <a href="{{ social_platform.url }}" target="_blank" class="list-social-platform__link">
+    <a href="{{ social_platform.url }}" target="_blank" class="list-social-platform__link" title="{{ social_platform.name }}">
       {% capture socialIcon %}{{ social_platform.icon | prepend: 'icon-' }}{% endcapture %}
       {% capture className %}{{ social_platform.icon | prepend: 'list-social-platform__icon--' | prepend: ' ' | prepend: 'list-social-platform__icon' | append: ' ' | append: 'icon--xs' }}{% endcapture %}
       {% render "icon", icon: socialIcon, class: className %}
