--- a/frontend/stylesheets/layouts/_default.scss
+++ b/frontend/stylesheets/layouts/_default.scss
@@ -40,5 +40,29 @@
 
   .app-hero ~ .app-content {
     padding-top: 0;
-  }  
+  }
+
+  .mailing-list {
+    padding: 2rem;
+
+    color: $white;
+    text-align: center;
+
+    background-color: black;
+
+    &__text {
+      padding: 0 2rem;
+
+      @include media-breakpoint-up('md') {
+        padding: 0;
+      }
+    }
+
+    .form-mailing-list {
+      @include media-breakpoint-up('md') {
+        @include make-col(6);
+        @include make-col-offset(3);
+      }
+    }
+  }
 }
