--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -9,7 +9,7 @@
   <div class="app-footer__footnote">
     <div class="container">
       <div class="app-footer__legal">
-        &copy; Bangkok.rb
+        &copy; <a href="https://bangkokrb.org/" title="Ruby Community organizer">Bangkok.rb</a>
       </div>
       <div class="app-footer__community">
         Built with <a href="https://www.ruby-lang.org/en/">Ruby</a> & <a href="https://www.bridgetownrb.com/">Bridgetown</a>
