Update accent color for navigation and hero

--- a/frontend/stylesheets/components/_app-hero.scss
+++ b/frontend/stylesheets/components/_app-hero.scss
@@ -3,7 +3,7 @@
   align-items: center;
   padding: 2rem 0;
 
-  background-color: $primary;
+  background-color: $black;
 
   &__heading {
     font-weight: 500;
