--- a/frontend/stylesheets/components/_error.scss
+++ b/frontend/stylesheets/components/_error.scss
@@ -30,7 +30,8 @@
   &__action {
     display: flex;
 
-    margin-top: 45px;
+    margin-top: 30px;
+    margin-bottom:30px;
   }
 
   &__action a {
