--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -1,12 +1,4 @@
 <footer class="app-footer">
-  <section class="app-footer__mailing-list">
-    <div class="container">
-      <h3>Join our mailing list</h3>
-      <p class="mailing-list__text">Sign up to receive updates about the event</p>
-      {% render "form_mailing_list" %}
-    </div>
-  </section>
-  
   <section class="app-footer__social-platform">
     <div class="container">
       <h3>Follow us</h3>
@@ -17,7 +9,7 @@
   <div class="app-footer__footnote">
     <div class="container">
       <div class="app-footer__legal">
-        &copy; Bangkok.rb
+        &copy; <a href="https://bangkokrb.org/" title="Ruby Community organizer">Bangkok.rb</a>
       </div>
       <div class="app-footer__community">
         Built with <a href="https://www.ruby-lang.org/en/">Ruby</a> & <a href="https://www.bridgetownrb.com/">Bridgetown</a>
