--- a/src/_components/form_mailing_list.liquid
+++ b/src/_components/form_mailing_list.liquid
@@ -1,9 +1,9 @@
 <form action="https://rubyconfth.us20.list-manage.com/subscribe/post?u=fd4a02525718b1d58ebaed6a0&id=4af9421776" method="post" class="form-mailing-list form" target="_blank">
   <div class="form__group">
-    <input type="hidden" name="tags" value="2841779">
+    <input type="hidden" name="tags" value="3502539">
     <input type="email" name="EMAIL" placeholder="Enter your email address" class="form__control form__control--lg" required />
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_fd4a02525718b1d58ebaed6a0_4af9421776" tabindex="-1" value=""></div>
   </div>
-  <button type="submit" class="form-mailing-list__btn btn btn--primary">Count me in</button>
+  <button type="submit" class="form-mailing-list__btn btn btn--primary">I Love Ruby</button>
 </form>
